<resources>
    <string name="app_name">App</string>
    <string name="login_edit">Introduce DNI</string>
    <string name="passwd_edit">Introduce Password</string>
    <string name="access_button">Acceder</string>
    <string name="login_text">Usuario</string>
    <string name="passwd_text">Contraseña</string>
    <string name="leccion1_text">Lección 1: Introducción a Android</string>
    <string name="test_button">NUEVO TEST</string>
    <string name="exercise_button">NUEVO EJERCICIO</string>
    <string name="accountment_button">SEGUIMIENTO</string>
    <string name="button_send">ENVIAR</string>
    <string name="text_send_file">SUBIR FICHERO</string>
    <string name="text_take_photo">SACAR FOTO</string>
    <string name="text_record_audio">GRABAR AUDIO</string>
    <string name="text_record_video">GRABAR VÍDEO</string>
    <string name="bad_answer">¡HAS FALLADO!</string>
    <string name="good_answer">¡CORRECTO!</string>
    <string name="advice_button">ADVICE</string>
    <string name="no_camara">¡NO HAY CÁMARA!</string>
    <string name="no_app">NO HAY APP PARA FOTOS</string>
    <string name="no_micro">NO HAY MICRÓFONO</string>
    <string name="display_name">Display Name:</string>
    <string name="size">Size:</string>
    <string name="welcome_msg">"Bienvenido "</string>
    <string name="connecting">Conectando…</string>
    <string name="auth_fail">Lo sentimos: Hay un fallo de autenticación</string>
    <string name="file_send_ok">Subido correctamente</string>
    <string name="file_send_bad">Fallo de servidor</string>
</resources>
