<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.tta.pbahillo002.app.ExerciseActivity">

    <TextView
        android:id="@+id/exercise_wording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_send_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_send_file"
        android:onClick="sendFile"/>
    <Button
        android:id="@+id/button_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_take_photo"
        android:onClick="takePhoto"/>
    <Button
        android:id="@+id/button_record_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_record_audio"
        android:onClick="recordAudio"/>
    <Button
        android:id="@+id/button_record_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_record_video"
        android:onClick="recordVideo"/>

</LinearLayout>
